--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "osfive"]
-	path = osfive
-	url = https://github.com/osfive/osfive
+[submodule "mdepx"]
+	path = mdepx
+	url = https://github.com/machdep/mdepx
