--- a/mdepx.conf
+++ b/mdepx.conf
@@ -1,42 +1,47 @@
 module mdepx;
 module src;
 
-app nrf9160-boot;
+link ./ldscript obj/nrf9160-boot.elf;
 
-ldscript ldscript;
+search-path mdepx/include mdepx/kernel mdepx/arch .;
 
 src {
-	incs+ ../mdepx/include ../mdepx/kernel ..;
 	objects errata.o main.o start.o;
 };
 
 mdepx {
+	module arch;
 	module kernel;
 	module lib;
 
-	incs+ kernel include;
-
-	kernel {
+	arch {
 		module arm;
-		module cpu;
-		module callout;
-		module systm;
-		module thread;
 
 		arm {
 			options nrf9160;
 		};
+	};
+
+	kernel {
+		module cpu;
+		module callout;
+		module systm;
+		module thread;
 
 		callout {
 			options tsleep;
 		};
 
 		systm {
-			options console;
+			options panic console;
 		};
 	};
 
 	lib {
 		module libc;
+
+		libc {
+			module stdio string;
+		};
 	};
 };
