--- a/mdepx.conf
+++ b/mdepx.conf
@@ -3,7 +3,7 @@ module src;
 
 link ./ldscript obj/nrf9160-boot.elf;
 
-search-path mdepx/include mdepx/kernel mdepx/arch .;
+set-search-path mdepx/include mdepx/kernel mdepx/arch .;
 
 src {
 	objects errata.o main.o start.o;
