Add support for nRF5340. Rename project to nrf-boot.

--- a/mdepx-nrf91.conf
+++ b/mdepx-nrf91.conf
@@ -1,12 +1,12 @@
 module mdepx;
 module src;
 
-link ./ldscript obj/nrf9160-boot.elf;
+link ./ldscript obj/nrf-boot.elf;
 
 set-search-path mdepx/include mdepx/kernel mdepx/arch .;
 
 src {
-	objects errata.o main.o start.o;
+	objects errata.o nrf91.o start.o;
 };
 
 mdepx {
