Use separate ELF file for nrf53 and nrf91. Update mdepx.

--- a/mdepx-nrf53.conf
+++ b/mdepx-nrf53.conf
@@ -1,7 +1,7 @@
 module mdepx;
 module src;
 
-link ./ldscript obj/nrf-boot.elf;
+link ./ldscript obj/nrf53-boot.elf;
 
 set-search-path mdepx/include mdepx/kernel mdepx/arch .;
 
