--- a/mdepx-nrf91.conf
+++ b/mdepx-nrf91.conf
@@ -1,7 +1,7 @@
 module mdepx;
 module src;
 
-link ./ldscript obj/nrf-boot.elf;
+link ./ldscript obj/nrf91-boot.elf;
 
 set-search-path mdepx/include mdepx/kernel mdepx/arch .;
 
