--- a/mdepx-nrf91.conf
+++ b/mdepx-nrf91.conf
@@ -3,7 +3,7 @@ module src;
 
 link ./ldscript obj/nrf91-boot.elf;
 
-set-search-path mdepx/include mdepx/kernel mdepx/arch .;
+set-search-path mdepx/include mdepx/kernel mdepx/arch . mdepx/;
 
 src {
 	objects errata.o nrf91.o start.o;
@@ -29,7 +29,7 @@ mdepx {
 		module thread;
 
 		callout {
-			options tsleep;
+			options tsleep sem;
 		};
 
 		systm {
