--- a/mdepx-nrf53.conf
+++ b/mdepx-nrf53.conf
@@ -27,13 +27,10 @@ mdepx {
 		module callout;
 		module systm;
 		module thread;
-
-		callout {
-			options tsleep sem;
-		};
+		module nosched;
 
 		systm {
-			options panic console;
+			options console;
 		};
 	};
 
