o Reduce amount of SRAM needed to 32kb. o Update mdepx.

--- a/mdepx-nrf53.conf
+++ b/mdepx-nrf53.conf
@@ -1,21 +1,21 @@
-module mdepx;
-module src;
+modules mdepx;
+modules src;
 
 link ./ldscript obj/nrf53-boot.elf;
 
 set-search-path mdepx/include mdepx/kernel mdepx/arch . mdepx/;
 
 src {
-	objects nrf53.o start.o;
+	objects nrf53.o jump.o;
 };
 
 mdepx {
-	module arch;
-	module kernel;
-	module lib;
+	modules arch;
+	modules kernel;
+	modules lib;
 
 	arch {
-		module arm;
+		modules arm;
 
 		arm {
 			options nrf9160;
@@ -23,11 +23,11 @@ mdepx {
 	};
 
 	kernel {
-		module cpu;
-		module callout;
-		module systm;
-		module thread;
-		module nosched;
+		modules cpu;
+		modules callout;
+		modules systm;
+		modules thread;
+		modules nosched;
 
 		systm {
 			options console;
@@ -35,10 +35,10 @@ mdepx {
 	};
 
 	lib {
-		module libc;
+		modules libc;
 
 		libc {
-			module stdio string;
+			modules stdio string;
 		};
 	};
 };
