Initialize the cc310 crypto library from ARM. Provide a secure gateway for non-secure applications to call secure functions. This will be used for rundom number generation.

--- a/mdepx-nrf53.conf
+++ b/mdepx-nrf53.conf
@@ -1,12 +1,48 @@
-modules mdepx;
-modules src;
+modules mdepx
+	src
+	nrf_cc310;
 
 link ./ldscript obj/nrf53-boot.elf;
 
-set-search-path mdepx/include mdepx/kernel mdepx/arch . mdepx/;
+set-build-flags -mthumb
+		-mcpu=cortex-m33
+		-mfpu=fpv5-sp-d16
+		-mfloat-abi=hard
+		-g
+		-nostdlib -nostdinc
+		-fshort-enums
+		-fno-builtin-printf
+		-ffreestanding;
+
+set-build-flags -Wredundant-decls
+		-Wnested-externs
+		-Wstrict-prototypes
+		-Wmissing-prototypes
+		-Wpointer-arith
+		-Winline
+		-Wcast-qual
+		-Wundef
+		-Wmissing-include-dirs
+		-Wall
+		-Werror;
+
+set-search-path mdepx/include
+		mdepx/kernel
+		mdepx/arch
+		mdepx/
+		.;
+
+nrf_cc310 {
+	objects lib/cortex-m33/hard-float/libnrf_cc310_0.9.12.a;
+};
 
 src {
-	objects nrf53.o jump.o;
+	objects cc310.o
+		errata.o
+		jump.o
+		nrf53.o
+		secure_gate.o
+		sys_entry.o;
 };
 
 mdepx {
@@ -18,7 +54,7 @@ mdepx {
 		modules arm;
 
 		arm {
-			options nrf9160;
+			options nrf9160 vfp;
 		};
 	};
 
@@ -28,6 +64,11 @@ mdepx {
 		modules systm;
 		modules thread;
 		modules nosched;
+		modules malloc;
+
+		malloc {
+			options fl fl_wrapper;
+		};
 
 		systm {
 			options console;
