Move uart pins configuration the config files.

--- a/mdepx-nrf53.conf
+++ b/mdepx-nrf53.conf
@@ -1,6 +1,7 @@
-modules mdepx
-	src
-	nrf_cc310;
+modules board
+	mdepx
+	nrf_cc310
+	src;
 
 link ./ldscript obj/nrf53-boot.elf;
 
@@ -34,6 +35,18 @@ set-search-path mdepx/include
 
 nrf_cc310 {
 	objects lib/cortex-m33/hard-float/libnrf_cc310_0.9.12.a;
+};
+
+board {
+	prefix board;
+
+	modules uart;
+
+	uart {
+		pin_tx 20;
+		pin_rx 22;
+		baudrate 115200;
+	};
 };
 
 src {
