Update mdepx: interface to nvic, scb changed.

--- a/mdepx-nrf53.conf
+++ b/mdepx-nrf53.conf
@@ -60,6 +60,7 @@ src {
 
 mdepx {
 	modules arch;
+	modules dev;
 	modules kernel;
 	modules lib;
 
@@ -70,6 +71,10 @@ mdepx {
 			nvic_nintrs 96;
 			options nrf9160 vfp;
 		};
+	};
+
+	dev {
+		modules gpio intc uart;
 	};
 
 	kernel {
