--- a/mdepx-nrf91.conf
+++ b/mdepx-nrf91.conf
@@ -68,8 +68,14 @@ mdepx {
 		modules arm;
 
 		arm {
+			modules nordicsemi;
+
 			nvic_nintrs 68;
-			options nrf9160 vfp;
+			options vfp;
+
+			nordicsemi {
+				options nrf9160;
+			};
 		};
 	};
 
@@ -90,7 +96,7 @@ mdepx {
 		};
 
 		systm {
-			options console;
+			options console device;
 		};
 	};
 
